some fonts and fun

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.color-nav {
+  background-color: #b9e5d9 !important;
+  color: #0A4D35 !important;
+  font-family: "ff-cocon-pro", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-link {
+  margin-left: .8em;
+}
+
+.brand-nav {
+  font-size: 1.75rem !important;
+  font-family: "ff-cocon-pro", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.brand-nav:hover {
+  margin-left: -10px !important;
+  margin-bottom: -8px !important;
+  margin-top: -8px !important;
+}
+
+h1,
+p,
+option {
+  color: #0A4D35;
 }
 
 h1 {
-  color: red;
+  font-family: ff-cocon-pro,
+    sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.75em !important;
 }
 
-.colorTest {
-  background-color: purple
+.green {
+  color: #0A4D35
+}
+
+.submitbtn {
+  background-color: #b9e5d9 !important;
+  color: #0A4D35 !important;
+  border-color: #0A4D35 !important;
+  font-family: "ff-cocon-pro",
+    sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.submitbtn:hover {
+  background-color: #0A4D35 !important;
+  color: #b9e5d9 !important;
+}
+
+a:hover,
+a:active {
+  background-color: #0A4D35 !important;
+  color: #b9e5d9 !important;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+body {
+  background-image: url(./assets/teal-white-and-pink-paint-1561020.jpg);
+}
+
+.remove {
+  display: inline;
+  float: right;
+  background-color: #b9e5d9 !important;
+  color: #0A4D35 !important;
+  border-color: #0A4D35 !important;
+}
+
+.remove:hover {
+  background-color: #0A4D35 !important;
+  color: #b9e5d9 !important;
+}
+
+.route-wrapper {
+  position: relative;
+}
+
+.form-label {
+  font-family: "ff-cocon-pro",
+    sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.2em;
+}
+
+.ticker {
+  text-align: right;
+  font-family: "ff-cocon-pro-condensed",
+    sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.labels {
+  font-family: "ff-cocon-pro-condensed",
+    sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.2em;
+}
+
+.card-body {
+  background-color: #f5ece5;
+  border-color: #f5ece5;
+}
+
+.card {
+  border: 2px solid #fac6dc !important;
 }
